get hidden states

--- a/test.ipynb
+++ b/test.ipynb
@@ -195,12 +195,10 @@
     "util.set_seed(args.seed)\n",
     "\n",
     "# Load model for finetuning or train from scratch.\n",
-    "if args.finetune_path is not None:\n",
-    "    model = DistilBertForQuestionAnswering.from_pretrained(args.finetune_path)\n",
+    "if args.finetune_path is not None and True:\n",
+    "    model = DistilBertForQuestionAnswering.from_pretrained(args.finetune_path, output_hidden_states=True, output_attentions=True)\n",
     "else:\n",
-    "    model = DistilBertForQuestionAnswering.from_pretrained(\n",
-    "        \"distilbert-base-uncased\"\n",
-    "    )\n",
+    "    model = DistilBertForQuestionAnswering.from_pretrained(\"distilbert-base-uncased\", output_hidden_states=True, output_attentions=True)\n",
     "tokenizer = DistilBertTokenizerFast.from_pretrained(\"distilbert-base-uncased\")\n",
     "\n",
     "if args.do_train:\n",
@@ -247,7 +245,7 @@
     "tbx = SummaryWriter(args.save_dir)\n",
     "\n",
     "optim.zero_grad()\n",
-    "model.train()\n"
+    "model.train()"
    ]
   },
   {
@@ -256,18 +254,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for batch in train_loader:\n",
-    "    input_ids = batch[\"input_ids\"].to(device)\n",
-    "    attention_mask = batch[\"attention_mask\"].to(device)\n",
-    "    start_positions = batch[\"start_positions\"].to(device)\n",
-    "    end_positions = batch[\"end_positions\"].to(device)\n",
-    "    outputs = model(\n",
-    "        input_ids,\n",
-    "        attention_mask=attention_mask,\n",
-    "        start_positions=start_positions,\n",
-    "        end_positions=end_positions,\n",
-    "    )\n",
-    "    break"
+    "with torch.enable_grad():\n",
+    "    for batch in train_loader:\n",
+    "        input_ids = batch[\"input_ids\"].to(device)\n",
+    "        attention_mask = batch[\"attention_mask\"].to(device)\n",
+    "        start_positions = batch[\"start_positions\"].to(device)\n",
+    "        end_positions = batch[\"end_positions\"].to(device)\n",
+    "        outputs = model(\n",
+    "            input_ids,\n",
+    "            attention_mask=attention_mask,\n",
+    "            start_positions=start_positions,\n",
+    "            end_positions=end_positions,\n",
+    "        )\n",
+    "        break"
    ]
   },
   {
@@ -295,6 +294,33 @@
     "    print(decoded_string)\n",
     "    print(start_positions[qid], end_positions[qid], answer_string)\n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outputs"
    ]
   },
   {
